# OpenMedia

./: CMakeLists.txt  README.md  gitdeps.json  gitdeps.sh
.github/workflows/: test_build.yml
example/: CMakeLists.txt  audio_sink.hpp  av_clock.hpp  frame_queue.hpp  main.cpp  media_player.hpp  ring_buffer.hpp  ui.hpp  video_renderer.hpp
include/openmedia/: codec_api.hpp  codec_defs.h  format_api.hpp  hw_dx11.h  hw_dx12.h  io.hpp  video.hpp
omplayer/: main.cpp
src/: annexb.hpp  avcodec.cpp  avformat.cpp  avformat.hpp  avutil.cpp  avutil.hpp  bmff_demuxer.cpp  codec_defs.cpp  codec_registry.cpp  codecs.hpp  format_registry.cpp  formats.hpp  hw_dx11.cpp  hw_dx12.cpp  io.cpp  matroska.cpp  matroska_demuxer.cpp
src/audio/: audio_toolbox.cpp  fdk_aac.cpp  wmf_audio.cpp
src/util/: demuxer_base.hpp  io_util.hpp
src/video/: amf.cpp  dx11.cpp  dx12.cpp  vvdec.cpp  xevd.cpp  xeve.cpp
